# 2025-final-individual-dreamonovich

solution/: README.md  docker-compose.yml
solution/api/: entrypoint.sh  locustfile.py  openapi.yml  pyproject.toml  task.md
solution/api/app/: exceptions.py  middleware.py  paginations.py  profanity_filter.py  serializers.py  settings.py  storages.py  urls.py  utils.py  validators.py  views.py
solution/api/business/: ai.py  algorithm.py  apps.py  grafana.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
solution/api/business/management/commands/: generate_data.py  stress_test.py  stress_test_clickhouse.py
solution/api/business/migrations/: 0001_initial.py  0002_initial.py  0003_campaign_clicks_count_campaign_impressions_count_and_more.py
solution/api/client/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
solution/api/client/migrations/: 0001_initial.py  0002_remove_click_client_clic_adverti_13c970_idx_and_more.py
solution/grafana-data/: grafana.db
solution/grafana-data/plugins/grafana-clickhouse-datasource/: MANIFEST.txt  module.js  module.js.map  plugin.json
solution/grafana-data/plugins/marcusolsson-calendar-panel/: MANIFEST.txt  (+3 more)
solution/postgresql/: postgresql.conf
solution/prometheus-data/: prometheus.yml
solution/tgbot/: Dockerfile  entrypoint.sh  pyproject.toml
solution/tgbot/app/: main.py
solution/tgbot/app/db/: db.py  models.py
solution/tgbot/app/dialogs/campaign/: callback.py  dialog.py  getters.py  states.py
solution/tgbot/app/dialogs/menu/: callback.py  dialog.py  getters.py  states.py
